Bill Input Modified w/ No Color

--- a/tipCalculator.html
+++ b/tipCalculator.html
@@ -20,11 +20,10 @@
 
         <div class="calculator">
                 
+            <!--BILL INPUT-->
                     <div class="bill-title">
                         Bill 
-                        <div class="bill-input">
-                            <input type="text">
-                        </div>
+                            <input type="text" id="bill-input" placeholder="0">
                     </div>
 
 
